2005-05-04  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: fix up gimp-print stuff for 10.4

2005-04-27  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: include gettext-tools among the additional pkgs

2005-04-26  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm, Bootstrap.pm: backporting the final version of
	path prefixes

2005-04-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm, Bootstrap.pm: use two possible path prefixes,
	path-prefix-g++-3.3 and path-prefix-g++-4.0, depending on the
	current Distribution

2005-04-20  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: create an actual file in the buildlock package.

2005-04-20  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm, PkgVersion.pm, Services.pm: Overhauled enforce_gcc
	error messages.

2005-04-19  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: backed out the default value for CXXFLAGS, added
	a default value for CXX instead
	* Bootstrap.pm:  recognize 10.3.9
	* PkgVersion.pm: make sure NoSetCXX still works

2005-04-17  Daniel Macks  <dmacks@netspace.org>

	* Configure.pm: choose_mirrors stops searching for current as soon
	as found, and ignores Timestamp field in mirror files.

2005-04-16  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Configure.pm: choose_mirrors now examines the current choices 
	for outdated entries, and prompts the user about this; the default
	values (chosen after a timeout when running in the fink-mirrors
	postinstall script) will replace any outdated choices of the user
	by currently acceptable choices
	* Configure.pm: also backported the binary return value for
	choose_mirrors

2005-04-11  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: add a default for CXXFLAGS for recent distributions

2005-03-30  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Corrected my typo in the AppBundles backport.

2005-03-25  Daniel Macks  <dmacks@netspace.org>
