@@ -41,6 +41,8 @@ use Fink::Bootstrap qw(&get_bsbase);
 use Fink::Command qw(mkdir_p rm_f rm_rf symlink_f du_sk chowname touch);
 use File::Basename qw(&dirname &basename);
 use Fink::Notify;
+use Fink::Text::DelimMatch;
+use Fink::Text::ParseWords qw(&parse_line);
 
 use POSIX qw(uname strftime);
 
@@ -437,10 +439,6 @@ sub conditional_space_list {
 	my $where = shift;   # used in warning messages
 
 	return $string unless defined $string and $string =~ /\(/; # short-circuit
-
-	use Fink::Text::DelimMatch;
-
-	use Text::ParseWords;    # part of perl5 itself
 
 	# prepare the paren-balancing parser
 	my $mc = Fink::Text::DelimMatch->new( '\s*\(\s*', '\s*\)\s*' );
